--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node ./server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json"
+    "dev": "concurrently \"react-scripts start\" \"npm run server\"",
+    "server:static": "json-server --watch ./src/data/db.json --port 8080",
+    "server": "json-server --watch db.json --port 8080"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
