--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "yarn server",
+    "start": "npm run server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
